--- a/style.css
+++ b/style.css
@@ -26,11 +26,9 @@
 }
 
 .box-area{
-	position: absolute;
-	top: 0;
-	left: 0;
+	position:absolute;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	overflow: hidden;
 }
 
